...
          className="px-6"
          showsVerticalScrollIndicator={false}
        >

          <View className="pt-10 pb-6 items-center">
            <Text className="text-3xl font-bold text-white">
              Perfil
            </Text>

            <Text className="text-gray-300 mt-2">
              Gerencie sua conta
            </Text>
          </View>
...
                onPress={() => setIsEditing(true)}
              />
            )}

            <View className="mt-6">
              <Button
                title="Sair da conta"
                testID="logout-button"
                onPress={handleLogout}
                variant="danger"
              />
            </View>

...
