...
    const { event } = route.params;

    const { date, time } = formatDateTime(event.date);

    return (
        <SafeAreaView
            testID="event-details-screen"
            edges={["top", "left", "right"]}
            className="flex-1 bg-coffee"
        >
            <ScrollView
                showsVerticalScrollIndicator={false}
                contentContainerStyle={{
...
