appId: ${APP_ID}
---
- launchApp:
    clearState: true

- tapOn: "Digite seu e-mail"
- eraseText
- inputText: "${TEST_EMAIL}"

- tapOn: "Digite sua senha"
- eraseText
- inputText: "${TEST_NEW_PASSWORD}"

- hideKeyboard

- tapOn: "Entrar"

- assertVisible: "Rota do Café"

- tapOn:
    id: "tab-categoria"
- assertVisible: "Descubra experiências únicas ☕"

- tapOn:
    id: "tab-explorar"

- assertVisible:
    id: "map-screen"

- tapOn: "Eventos"
- assertVisible: "Eventos"

- tapOn: "Perfil"
- assertVisible: "Perfil"
