appId: ${APP_ID}
---
- launchApp:
    clearState: true

- tapOn: "Digite seu e-mail"
- eraseText
- inputText: "${TEST_EMAIL}"

- tapOn: "Digite sua senha"
- eraseText
- inputText: "${TEST_PASSWORD}"

- hideKeyboard

- tapOn: "Entrar"

- assertVisible: "Descubra o Vale do Café no Sul Fluminense e explore fazendas históricas, cafés coloniais e experiências culturais."
