appId: ${APP_ID}
---
- launchApp:
    clearState: true

- tapOn: "Digite seu e-mail"
- inputText: "${TEST_EMAIL}"

- tapOn: "Digite sua senha"
- inputText: "${TEST_PASSWORD}"

- hideKeyboard

- tapOn: "Entrar"

# - extendedWaitUntil:
#     visible: "No thanks"
#     timeout: 5000

# - tapOn: "No thanks"

- assertVisible: "Rota do Café"

- tapOn:
    id: "tab-perfil"

- assertVisible: "Perfil"

- tapOn:
    id: "profile-avatar"

- assertVisible: "Escolher foto"

- tapOn: "Tirar foto"

- extendedWaitUntil:
    visible: "Shutter"
    timeout: 10000

- tapOn:
    id: "com.android.camera2:id/shutter_button"

- extendedWaitUntil:
    visible: "Done"
    timeout: 10000

- tapOn:
    id: "com.android.camera2:id/done_button"

- assertVisible: "Perfil"
