appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "Digite seu e-mail"
- inputText: "${TEST_EMAIL}"

- tapOn: "Digite sua senha"
- inputText: "${TEST_PASSWORD}"

- hideKeyboard

- tapOn: "Entrar"

# - extendedWaitUntil:
#     visible: "No thanks"
#     timeout: 5000
    
# - tapOn: "No thanks"

- assertVisible: "Rota do Café"

- tapOn: "Perfil"
- assertVisible: "Perfil"

- tapOn: "Sair da conta"
- tapOn: "SAIR"
- assertVisible: "Bem-vindo!"
