appId: ${APP_ID}
---
- launchApp:
    clearState: true

- tapOn: "Digite seu e-mail"
- eraseText
- inputText: "${SUPERADMIN_EMAIL}"

- tapOn: "Digite sua senha"
- eraseText
- inputText: "${SUPERADMIN_PASSWORD}"

- hideKeyboard

- tapOn: "Entrar"

- extendedWaitUntil:
    visible: "Rota do Café"
    timeout: 10000

- tapOn: "Eventos"

- tapOn:
    id: "event-card"

- assertVisible:
    id: "event-details-screen"
